package org.example;
//------------------------------------------------------
// Assignment 2
// Written by: Anthony Jaimes ID: 2018391
// For SES350 Section 602 – Spring 2025
//--------------------------------------------------------
public class Monster extends Character {
    Monster(String name, int strength, int craft, int health) {
        super(name, strength, craft, health);
    }
}