package org.example;
//------------------------------------------------------
// Assignment 2
// Written by: Anthony Jaimes ID: 2018391
// For SES350 Section 602 – Spring 2025
//--------------------------------------------------------
public class Sword extends Item {
    Sword() {
        super("Diamond Sword", 10, 0);
    }
}
