package org.example;
//------------------------------------------------------
// Assignment 2
// Written by: Anthony Jaimes ID: 2018391
// For SES350 Section 602 – Spring 2025
//--------------------------------------------------------
public class Warrior extends Character {

    public Warrior(String name) {
        super(name, 20, 10, 10);
    }
}