package org.example;
//------------------------------------------------------
// Assignment 2
// Written by: Anthony Jaimes ID: 2018391
// For SES350 Section 602 – Spring 2025
//--------------------------------------------------------
public class Wizard extends Character {

    public Wizard(String name) {
        super(name, 1, 4, 3);
    }
}